Refactor: 게시글 요약 페이지 조립 로직 공통화